# django-corebase

./: .gitignore  README.md  pyproject.toml
corebase/admin/: __init__.py
corebase/models/: defs.py
corebase/utils/: __init__.py  urls.py  utils.py
tests/: test_corebase.py
