[tool.poetry]
name = "corebase"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
django-mptt = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
